syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.arister.proto";
option java_outer_classname = "KycProto";

package kyc;

enum KycVerificationStatus {
  PENDING = 0;
  VERIFIED = 1;
  REJECTED = 2;
}

message CustomerKyc {
  int64 id = 1;
  int64 customerId = 2;
  string documentType = 3;
  string documentNumber = 4;
  string issueDate = 5;
  string expiryDate = 6;
  string issuingCountry = 7;
  string issuingAuthority = 8;
  KycVerificationStatus verificationStatus = 9;
  string verifiedAt = 10;
  string verifiedBy = 11;
  string rejectionReason = 12;
  string notes = 13;
  string createdAt = 14;
}

message AddCustomerKycRequest {
  int64 customerId = 1;
  string documentType = 2;
  string documentNumber = 3;
  string issueDate = 4;
  string expiryDate = 5;
  string issuingCountry = 6;
  string issuingAuthority = 7;
  string notes = 8;
}

message UpdateKycVerificationRequest {
  int64 kycId = 1;
  KycVerificationStatus verificationStatus = 2;
  string verifiedBy = 3;
  string rejectionReason = 4;
}

message GetCustomerKycRequest {
  int64 kycId = 1;
}

message ListCustomerKycRequest {
  int64 customerId = 1;
}

message CustomerKycResponse {
  bool success = 1;
  string message = 2;
  CustomerKyc kyc = 3;
}

message ListCustomerKycResponse {
  bool success = 1;
  string message = 2;
  repeated CustomerKyc kycRecords = 3;
}

service CustomerKycService {
  rpc AddCustomerKyc(AddCustomerKycRequest) returns (CustomerKycResponse);
  rpc UpdateKycVerification(UpdateKycVerificationRequest) returns (CustomerKycResponse);
  rpc GetCustomerKyc(GetCustomerKycRequest) returns (CustomerKycResponse);
  rpc ListCustomerKyc(ListCustomerKycRequest) returns (ListCustomerKycResponse);
}
